--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
   },
   "homepage": "https://github.com/malchata/yall#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "del": "^2.2.2",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-optimize-js": "^1.1.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7"
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8"
+  },
+  "dependencies": {
+    "gulp-prepack": "0.0.2"
   }
 }
