--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "yall",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Yet Another Lazy Loader",
-  "main": "gulpfile.js",
   "scripts": {
-    "build": "gulp"
+    "build": "npx uglifyjs --verbose -c -m -o ./dist/yall.js ./src/yall.js"
   },
   "repository": {
     "type": "git",
@@ -26,11 +25,7 @@
   },
   "homepage": "https://github.com/malchata/yall#readme",
   "devDependencies": {
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-optimize-js": "^1.1.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8"
+    "uglify-js": "^3.0.27"
   },
   "dependencies": {}
 }
