--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "yall",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Yet Another Lazy Loader",
   "scripts": {
-    "build": "npx uglifyjs --verbose -c -m -o ./dist/yall.js ./src/yall.js"
+    "build": "npx uglifyjs --verbose -c -m --toplevel -o ./dist/yall.js ./src/yall.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/malchata/yall.git"
   },
   "keywords": [
-    "yet",
-    "another",
-    "lazy",
-    "loader",
-    "yall",
-    "image",
-    "images"
+    "lazy load",
+    "images",
+    "web performance"
   ],
   "author": "Jeremy Wagner <jeremy.l.wagner@gmail.com> (https://jeremywagner.me/)",
   "license": "MIT",
