--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/malchata/yall.js#readme",
   "devDependencies": {
+    "npx": "^9.7.1",
     "uglify-js": "^3.0.27"
   },
   "dependencies": {}
