--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
   "name": "yall",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Yet Another Lazy Loader",
   "main": "./src/yall.js",
   "scripts": {
-    "clean": "rm -rf ./dist&&mkdir -p ./dist",
-    "build": "npm run clean&&npx uglifyjs --verbose --toplevel --compress toplevel --mangle toplevel -o ./dist/yall-$(node -p -e \"require('./package.json').version\").min.js $(node -p -e \"require('./package.json').main\")"
+    "clean": "rimraf ./dist && mkdir -p ./dist",
+    "build": "npm run clean && npx babel $(node -p -e \"require('./package.json').main\") | npx uglifyjs --timings --warn --verbose --mangle --output ./dist/yall-$(node -p -e \"require('./package.json').version\").min.js && npm run update-test",
+    "update-test": "cp -fv ./dist/yall-$(node -p -e \"require('./package.json').version\").min.js ./test/js/yall.min.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/malchata/yall.js.git"
+    "url": "git+ssh://git@github.com/malchata/yall.js.git"
   },
   "keywords": [
     "lazy load",
     "images",
     "web performance"
   ],
-  "author": "Jeremy Wagner <jeremy.l.wagner@gmail.com> (https://jeremywagner.me/)",
+  "author": "Jeremy L. Wagner <jeremy.l.wagner@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/malchata/yall.js/issues"
   },
   "homepage": "https://github.com/malchata/yall.js#readme",
   "devDependencies": {
-    "npx": "^9.7.1",
-    "uglify-js": "^3.1.6"
-  },
-  "dependencies": {}
+    "express": "^4.16.3",
+    "npx": "^10.0.1",
+    "uglify-js": "^3.3.16",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "rimraf": "^2.6.2"
+  }
 }
