Tweaks and changes.

--- a/uglify.config.json
+++ b/uglify.config.json
@@ -1,5 +1,9 @@
 {
-  "mangle": true,
+  "mangle": {
+    "keep_fnames": true,
+    "toplevel": true,
+    "reserved": ["yall"]
+  },
   "timings": true,
   "compress": {
     "sequences": true,
