--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yall",
-  "version": "2.0.0-b",
+  "version": "2.0.0b",
   "description": "Yet Another Lazy Loader",
   "main": "./src/yall.js",
   "scripts": {
@@ -30,11 +30,12 @@
   },
   "homepage": "https://github.com/malchata/yall.js#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "express": "^4.16.3",
     "npx": "^10.0.1",
-    "uglify-js": "^3.3.20",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "uglify-js": "^3.3.21"
   }
 }
