--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yall",
-  "version": "2.0.0b",
+  "version": "2.0.0",
   "description": "Yet Another Lazy Loader",
   "main": "./src/yall.js",
   "scripts": {
@@ -34,7 +34,7 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "express": "^4.16.3",
-    "npx": "^10.0.1",
+    "npx": "^10.2.0",
     "rimraf": "^2.6.2",
     "uglify-js": "^3.3.21"
   }
