--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,9 @@
   "presets": [
     ["env", {
       "targets": {
-        "browsers": ["last 2 versions", "safari >= 7"]
+        "browsers": ["last 3 versions", "safari >= 9", "ie >= 9"]
       }
     }]
   ],
-  "plugins": ["transform-object-assign"]
+  "plugins": ["transform-object-rest-spread"]
 }
