--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   "homepage": "https://github.com/malchata/yall.js#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "express": "^4.16.3",
     "npx": "^10.2.0",
     "rimraf": "^2.6.2",
     "uglify-js": "^3.3.23"
-  }
+  },
+  "dependencies": {}
 }
