--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "yall",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Yet Another Lazy Loader",
   "main": "./src/yall.js",
   "scripts": {
     "clean": "rimraf \"./dist\" && mkdirp \"./dist\"",
     "uglify": "cross-var npx babel $npm_package_main | cross-var npx uglifyjs --verbose --warn --config-file ./uglify.config.json --output ./dist/yall-$npm_package_version.min.js",
     "update-test": "cross-var cp -fv ./dist/yall-$npm_package_version.min.js ./test/js/yall.min.js",
-    "test": "node http.js",
+    "lint": "npx eslint ./src/yall.js",
+    "test": "npm run lint && node http.js",
     "build": "npm run clean && npm run uglify && npm run update-test"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/malchata/yall.js.git"
+    "urnl": "git+ssh://git@github.com/malchata/yall.js.git"
   },
   "keywords": [
     "lazy load",
@@ -29,32 +30,18 @@
   },
   "homepage": "https://github.com/malchata/yall.js#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
     "cross-var": "^1.1.0",
-    "express": "^4.16.3",
+    "eslint": "^5.10.0",
+    "express": "^4.16.4",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.6.2",
-    "uglify-js": "^3.4.6"
+    "uglify-js": "^3.4.9"
   },
-  "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "browsers": [
-              "last 3 versions",
-              "safari >= 10",
-              "ie >= 10"
-            ]
-          }
-        }
-      ]
-    ],
-    "plugins": [
-      "transform-object-rest-spread"
-    ]
+  "dependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.2.0"
   }
 }
