--- a/package.json
+++ b/package.json
@@ -30,18 +30,16 @@
   },
   "homepage": "https://github.com/malchata/yall.js#readme",
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "cross-var": "^1.1.0",
-    "eslint": "^5.10.0",
+    "eslint": "^5.12.0",
     "express": "^4.16.4",
     "mkdirp": "^0.5.1",
-    "rimraf": "^2.6.2",
+    "rimraf": "^2.6.3",
     "uglify-js": "^3.4.9"
   },
-  "dependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.2.0"
-  }
+  "dependencies": {}
 }
