--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -233,9 +233,9 @@
     "padding-line-between-statements": "error",
     "prefer-arrow-callback": "error",
     "prefer-const": "off",
-    "prefer-destructuring": "error",
+    "prefer-destructuring": "off",
     "prefer-numeric-literals": "error",
-    "prefer-object-spread": "error",
+    "prefer-object-spread": "off",
     "prefer-promise-reject-errors": "error",
     "prefer-reflect": "off",
     "prefer-rest-params": "error",
